--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Find the Invisible Caio</title>
-    <meta http-equiv="Content-type" content="text/html; charset=iso-8859-1"/>
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="jquery-1.9.1.js"></script>
     <script type="text/javascript" src="jquery-ui-1.10.3.custom.min.js"></script>
@@ -10,12 +10,12 @@
 </head>
 <body>
 <div class="container"></div>
-<div class="dialog newGame"><h1>Find the Invisible Caio</h1><br>Mova o cursor para encontrar o Caio. Ele está escondido
-    atrás dos gritos.<br>Tenha certeza de que seu som está ligado<br>
+<div class="dialog newGame"><h1>Find the Invisible Caio</h1><br>Mova o cursor para encontrar o Caio. Ele estÃ¡ escondido
+    atrÃ¡s dos gritos.<br>Tenha certeza de que seu som estÃ¡ ligado<br>
 
-    <div class="button" id="newGameButton">Começar jogo</div>
+    <div class="button" id="newGameButton">ComeÃ§ar jogo</div>
 </div>
-<div class="dialog endGame"><h1>Parabéns</h1>Você encontrou o Caio invivível!<br>
+<div class="dialog endGame"><h1>ParabÃ©ns</h1>VocÃª encontrou o Caio invivÃ­vel!<br>
     <div class="button" id="endGameButton">Jogar denovo</div>
 </div>
 <img src="caio.png" class="caio">
